--- a/songs/styles.css
+++ b/songs/styles.css
@@ -16,7 +16,7 @@ pre {
   color: #e7e2e2;
   margin: 0;
   font-size: 22px;  
-  line-height: 0.65em;
+  line-height: 1.1;
 
 }
 
@@ -30,15 +30,10 @@ h1{
 #chords {
 
   color: #ff0101;
-  flex-direction: column;
-  align-items: center;
   margin-top: 2rem;
 }
 
 #chords_header {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
   color: #ffe601;
   margin-bottom: 1rem;
 }
